--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  slack: circleci/slack@4.10.1
+  
 jobs:
   build-frontend:
     docker:
@@ -77,6 +80,10 @@ jobs:
             npm install
             npm audit fix --audit-level=critical --force
             npm audit --audit-level critical
+      - slack/notify:
+          channel: $SLACK_DEFAULT_CHANNEL
+          event: fail
+          template: basic_fail_1
 
   scan-backend:
     docker:
@@ -92,6 +99,10 @@ jobs:
             npm install
             npm audit fix --audit-level=critical --force
             npm audit --audit-level critical
+      - slack/notify:
+          channel: $SLACK_DEFAULT_CHANNEL
+          event: fail
+          template: basic_fail_1
 
 workflows:
   default:
