--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,7 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit --audit-level critical
       - slack/notify:
+          when: on_fail
           channel: $SLACK_DEFAULT_CHANNEL
           event: fail
           template: basic_fail_1
@@ -100,6 +101,7 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit --audit-level critical
       - slack/notify:
+          when: on_fail
           channel: $SLACK_DEFAULT_CHANNEL
           event: fail
           template: basic_fail_1
