tar utility installation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,6 +141,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: tar utility installation
+          command: |
+            yum install tar
+      - run:
           name: Ensure back-end infrastructure exists
           command: |
             aws cloudformation deploy \
