--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ jobs:
       - run:
           name: tar utility installation
           command: |
-            yum install tar
+            yum install -y tar
       - run:
           name: Ensure back-end infrastructure exists
           command: |
