--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,9 +141,9 @@ jobs:
     steps:
       - checkout
       - run:
-          name: tar utility installation
+          name: tar and gzip utility installation
           command: |
-            yum install -y tar
+            yum install -y tar gzip
       - run:
           name: Ensure back-end infrastructure exists
           command: |
