Tar and Gzip Dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -300,6 +300,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            yum install -y tar gzip
             apk add --update ansible && apk add --update nodejs npm
             apk add --update rsync
             apk add --update curl
