--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,9 +245,11 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-                curl --insecure https://kvdb.io/FTsqZPfnVefXhWGzpdQ6gN/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                curl --insecure https://kvdb.io/FTsqZPfnVefXhWGzpdQ6gN/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
       - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - slack/notify:
           channel: $SLACK_DEFAULT_CHANNEL
@@ -284,6 +286,8 @@ jobs:
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - slack/notify:
           channel: $SLACK_DEFAULT_CHANNEL
@@ -326,7 +330,103 @@ jobs:
           channel: $SLACK_DEFAULT_CHANNEL
           event: fail
           template: basic_fail_1
-
+  smoke-test:
+    docker:
+      - image: python:3.9-alpine3.16
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update tar gzip
+            apk add --update ansible && apk add --update nodejs npm
+            apk add --update rsync
+            apk add --update curl
+            pip install awscli
+            apk add --upgrade bash
+      - run:
+          name: Get backend url and Backend smoke test.
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances --query "Reservations[*].Instances[*].PublicIpAddress" --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --output=text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            sleep 30s
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+                exit 0
+            else
+                exit 1
+            fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+              exit 0
+            else
+              exit 1
+            fi
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - slack/notify:
+          channel: $SLACK_DEFAULT_CHANNEL
+          event: fail
+          template: basic_fail_1
+          
+  cloudfront-update:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            curl -sL https://rpm.nodesource.com/setup_lts.x | bash -
+            yum -y install nodejs
+            yum -y install tar
+            yum -y install gzip
+      - run:
+          name: Save WorkflowID in Kvdb for cleanup job
+          working_directory: ./.circleci/files
+          command: |
+            export UnusedWorkflowID=$(aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
+            curl --insecure "https://kvdb.io/FTsqZPfnVefXhWGzpdQ6gN/udapeople" -d "$UnusedWorkflowID"
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            aws cloudformation deploy \
+              --template-file ".circleci/files/cloudfront.yml" \
+              --stack-name InitialStack \
+              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --tags project=udapeople
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  
+  cleanup:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Remove Unused Stacks
+          command: |
+            UnusedWorkflowID=$(curl --insecure https://kvdb.io/FTsqZPfnVefXhWGzpdQ6gN/udapeople )
+            CircleWorkflowID=${CIRCLE_WORKFLOW_ID:0:7}
+            if [[ "$CircleWorkflowID" != "$UnusedWorkflowID" ]]
+            then
+              aws s3 rm "s3://udapeople-${UnusedWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${UnusedWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${UnusedWorkflowID}"
+            fi
 
 workflows:
   default:
@@ -351,3 +451,9 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update:
+          requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
