--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -407,9 +407,12 @@ jobs:
               --tags project=udapeople
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-          when: on_fail
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - slack/notify:
+          channel: $SLACK_DEFAULT_CHANNEL
+          event: fail
+          template: basic_fail_1
   
   cleanup:
     docker:
@@ -427,6 +430,10 @@ jobs:
               aws cloudformation delete-stack --stack-name "udapeople-backend-${UnusedWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${UnusedWorkflowID}"
             fi
+      - slack/notify:
+          channel: $SLACK_DEFAULT_CHANNEL
+          event: fail
+          template: basic_fail_1
 
 workflows:
   default:
